[gd_scene load_steps=7 format=2]

[ext_resource path="res://goblin_body.tscn" type="PackedScene" id=1]
[ext_resource path="res://characters/Goblin/Goblin.gd" type="Script" id=2]
[ext_resource path="res://objects/healthbar/HealthBar.tscn" type="PackedScene" id=3]
[ext_resource path="res://objects/aggroarea/AggroArea.tscn" type="PackedScene" id=4]

[sub_resource type="CapsuleShape" id=1]
radius = 1.5
height = 4.0

[sub_resource type="SphereShape" id=2]
radius = 22.0

[node name="Goblin" type="KinematicBody" groups=[
"Goblins",
]]
script = ExtResource( 2 )
enemyClass = 1

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 1.27259, 0 )
shape = SubResource( 1 )

[node name="RecruitArea" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="RecruitArea"]
shape = SubResource( 2 )

[node name="AggroArea" parent="." instance=ExtResource( 4 )]

[node name="Weapon" type="Spatial" parent="."]
transform = Transform( -1, 0, -3.25841e-07, 0, 1, 0, 3.25841e-07, 0, -1, 1.92241, 0.845744, -0.354186 )

[node name="HealthBar" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 5.56572, 0 )

[node name="body" parent="." instance=ExtResource( 1 )]
[connection signal="body_entered" from="RecruitArea" to="." method="_on_RecruitArea_body_entered"]
[connection signal="body_entered" from="AggroArea" to="." method="_on_AggroArea_body_entered"]
